force-app/main/default/objects/Workflow_Step__c/Workflow_Step__c.object-meta.xml
<CustomObject>
    <description>A single action step within a scheduling workflow</description>
    <label>Workflow Step</label>
    <nameField>
        <displayFormat>WS-{00000}</displayFormat>
        <label>Step ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>