force-app/main/default/objects/Workflow_Step__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>true</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Webhook</fullName><default>false</default><label>Webhook</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>