force-app/main/default/objects/Workflow_Step__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Host</fullName><default>false</default><label>Host</label></value>
            <value><fullName>Attendee</fullName><default>true</default><label>Attendee</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>