force-app/main/default/objects/Workflow_Step__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Message template with merge fields: {booking.title}, {booking.start}, {host.name}, {attendee.name}</description>
    <label>Template</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>