force-app/main/default/objects/Workflow_Step__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>Target URL for webhook action type</description>
    <label>Webhook URL</label>
    <type>Url</type>
</CustomField>